# KW-Economic-Tool

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  railway.json
app/: __init__.py  auth.py  compute.py  config.py  deps.py  exporting.py  main.py
app/routes/: __init__.py  earnings.py  lcp.py  lhhs.py  lookups.py  persistence.py
app/static/: styles.css
app/templates/: _actions.html  _cases_table.html  _discount_mode.html  _earnings_result.html  _lcp_result.html  _lhhs_result.html  _saved.html  base.html  cases.html  earnings.html  index.html  lcp.html  lhhs.html
data/: README.md
data/dvd/: _index.csv  dvd_table_001.csv  dvd_table_002.csv  dvd_table_003.csv  dvd_table_004.csv  dvd_table_005.csv  dvd_table_006.csv  dvd_table_007.csv  dvd_table_008.csv  dvd_table_009.csv  dvd_table_010.csv  dvd_table_011.csv  dvd_table_012.csv  dvd_table_013.csv  dvd_table_014.csv  dvd_table_015.csv  dvd_table_016.csv  dvd_table_017.csv  dvd_table_018.csv  dvd_table_019.csv  dvd_table_020.csv  dvd_table_021.csv  dvd_table_022.csv  dvd_table_023.csv  dvd_table_024.csv  dvd_table_025.csv  dvd_table_026.csv  dvd_table_027.csv  dvd_table_028.csv  dvd_table_029.csv  dvd_table_030.csv  dvd_table_031.csv  dvd_table_032.csv  dvd_table_033.csv  dvd_table_034.csv  dvd_table_035.csv  dvd_table_036.csv  dvd_table_037.csv  dvd_table_038.csv  dvd_table_039.csv  (+347 more)
data/dvd_valuation/: _index.csv  dvd_val_table_386.csv  dvd_val_table_387.csv  dvd_val_table_388.csv  dvd_val_table_389.csv  dvd_val_table_390.csv  dvd_val_table_391.csv  dvd_val_table_393.csv  dvd_val_table_394.csv  dvd_val_table_395.csv  dvd_val_table_397.csv  dvd_val_table_398.csv  dvd_val_table_399.csv  dvd_val_table_400.csv  dvd_val_table_401.csv  dvd_val_table_402.csv  dvd_val_table_403.csv  dvd_val_table_404.csv  dvd_val_table_411.csv
data/ecec/: _index.csv  ecec_table1_by_ownership.csv  ecec_table2_civilian_by_occupation_industry.csv  ecec_table3_stategov_by_occupation_industry.csv  ecec_table4_private_by_occupation_industry.csv  ecec_table5_private_by_bargaining_fulltime.csv  ecec_table6_private_by_establishment_size.csv  ecec_table7_private_by_region_division.csv
data/fred/: cpi_series.csv
data/nvsr_life_expectancy/: _index.csv  nvsr_tableA_life_expectancy_at_birth.csv  nvsr_tableB_life_expectancy_at_age_65.csv  nvsr_tableC_change_in_le_at_birth_2021_to_2022.csv
data/sck_wle/: _index.csv  wle_table_04_initially_active_men_ged.csv  (+39 more)
datasets/: __init__.py  builders.py  dvd.py  ecec.py  fred.py  nvsr.py  paths.py  sck.py  spf.py
engine/: __init__.py
examples/: exposito.py
exports/: __init__.py  pdf.py  report.py  workbook.py
mcp_server/: __init__.py  server.py
storage/: __init__.py  cases.py  db.py
tests/: generate_regression_baseline.py  regression_baseline.json  regression_scenarios.py  regression_serialize.py  test_common.py  test_compute.py  test_datasets.py  test_discount_modes.py  test_earnings.py  test_export_accuracy.py  test_exports.py  test_fred.py  test_invariants.py  test_lcp.py  test_lhhs.py  test_regression_snapshot.py  test_routes.py  test_storage.py
(+64 files in other folders)
