[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-calc"
version = "0.1.0"
description = "Forensic economic damages calculator: economic loss, life care plan, and loss of household services."
requires-python = ">=3.11"
# The engine itself has NO runtime dependencies. It is pure standard-library
# Python so the math can be tested and audited in isolation. Web, export, and
# MCP layers add their own dependencies via the optional groups below.
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "authlib>=1.3",
    "httpx>=0.27",          # required by authlib's Starlette OAuth client
    "itsdangerous>=2.1",
    "sqlmodel>=0.0.16",
    "psycopg[binary]>=3.1",  # Postgres backend in production (DATABASE_URL); SQLite needs nothing
]
export = [
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "reportlab>=4.0",       # pure-python PDF generation (Railway-friendly, no system libs)
]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=8.0",
]
# Browser end-to-end tests. After install run: playwright install chromium
e2e = [
    "pytest>=8.0",
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
include = ["engine*", "app*", "exports*", "storage*", "mcp_server*", "datasets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# E2E tests need a live server + a browser, so they are NOT part of the default
# run. Opt in with `pytest -m e2e` (after `pip install -e ".[web,export,e2e]"`
# and `playwright install chromium`).
addopts = "-m 'not e2e' --strict-markers"
markers = [
    "e2e: browser end-to-end test; needs playwright + a live server (opt in with -m e2e)",
]
